--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -6,5 +6,6 @@
         <a href="introduction.html" class="button-link">Introduction</a>
         <a href="WebsiteEvaluation.html">Website Evaluation</a>
         <a href="stuff/index.html" class="button-link">CRAPPY PAGE</a>
+        <a href="fccfsjs_outline.html" class="button-link">FCC FSJS Outline</a>
     </nav>
 </header>
