--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -7,5 +7,6 @@
         <a href="WebsiteEvaluation.html">Website Evaluation</a>
         <a href="stuff/index.html" class="button-link">CRAPPY PAGE</a>
         <a href="fccfsjs_outline.html" class="button-link">FCC FSJS Outline</a>
+        <a href="hobby/index.html" class="button-link">Hobby Project</a>
     </nav>
 </header>
