--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -4,6 +4,7 @@
         <a href="index.html" class="button-link">Home</a>
         <a href="contract.html" class="button-link">Course Contract</a>
         <a href="introduction.html" class="button-link">Introduction</a>
+        <a href ="SamantaCorp.com/index.html" class="button-link">Samanta Corp</a>
         <a href="WebsiteEvaluation.html">Website Evaluation</a>
         <a href="stuff/index.html" class="button-link">CRAPPY PAGE</a>
         <a href="fccfsjs_outline.html" class="button-link">FCC FSJS Outline</a>
