--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -9,5 +9,6 @@
         <a href="stuff/index.html" class="button-link">CRAPPY PAGE</a>
         <a href="fccfsjs_outline.html" class="button-link">FCC FSJS Outline</a>
         <a href="hobby/index.html" class="button-link">Hobby Project</a>
+        <a href="intro.html" class="button-link">Introduction Form</a>
     </nav>
 </header>
