--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -9,6 +9,6 @@
   <a href="https://www.linkedin.com/in/deb-samanta-a7157037b/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
   <a href="https://webpages.charlotte.edu/dsamanta/itis3135/DapperSloth/index.html" target="_blank" rel="noopener noreferrer">Dapper Sloth</a>
 
-  <a href="Samantacorp.com/index.html">Samanta Corp</a>
+  <a href="SamantaCorp.com/index.html">Samanta Corp</a>
   <p>Designed by Samanta Corp ©2025. All rights reserved.</p>
 </footer>
