--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -10,5 +10,6 @@
         <a href="fccfsjs_outline.html" class="button-link">FCC FSJS Outline</a>
         <a href="hobby/index.html" class="button-link">Hobby Project</a>
         <a href="intro.html" class="button-link">Introduction Form</a>
+        <a href ="ClientProject/index.html" class="button-link">Client Project</a>
     </nav>
 </header>
